--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desuscripcións</title>
+    <title>Desuscripciónes</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f5f5f5; }
         .container { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); text-align: center; max-width: 400px; width: 100%; }
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <a href="https://cristhianc-arx.github.io/mailing-subscribe/">mailing-subscribe</a>
+   
 
     <div class="container">
         <h1>¿Desea desuscribirse?</h1>
